# NIHData

./: README.md  pyproject.toml
src/NIHData/: __main__.py  _types.py  columns.py  crosswalk.py  errors.py  manager.py  processing.py  schemas.py
src/NIHData/cache/: env.py  manager.py
src/NIHData/data/: duns_uei_map.parquet
src/NIHData/domain/: errors.py
src/NIHData/frames/: objects.py
src/NIHData/parser/: fields.py  objects.py
tests/: test_crosswalk.py  test_frames_objects.py  test_schema_sync.py
