[project]
name = "nihdata"
version = "0.1.0"
description = "Parse, cache, and serve NIH data exports."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "polars==1.41.2",
    "uvicorn>=0.48.0",
]

[project.scripts]
nihdata = "NIHData.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/NIHData"]

[tool.pytest.ini_options]
testpaths = ["tests"]
